# XiaoTuCVBox

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindZint.cmake
include/XiaoTuCVBox/: Exception.h  Image.h  ImageUtils.h  QrCodeDetector.h  VideoCapture.h
resources/: map.pgm
src/: ImageUtils.cpp  VideoCapture.cpp
test/: hello_test.cpp  hello_test_eigen.cpp  hello_test_opencv.cpp  t_bar_qrcode.cpp  t_bar_qrcode_generate.cpp  t_stdin_v4l2_talk.cpp
